// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea matches snapshot for error: wrapperErrorText mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 0;
}

.emotion-17:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-17 {
    margin-bottom: 0;
  }
}

.emotion-8 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    margin-bottom: 0;
  }
}

.emotion-14 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-14:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<TextArea
  errorText="example"
  input={Object {}}
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <StyledHoc
    error="example"
    errorText="example"
  >
    <Label
      className="emotion-3 emotion-0"
      error="example"
      errorText="example"
    >
      <StyledLabel
        className="emotion-3 emotion-0"
        error="example"
        errorText="example"
      >
        <label
          className="emotion-0 emotion-17 emotion-2"
        >
          <StyledHoc>
            <LabelText
              className="emotion-3 emotion-0"
            >
              <StyledLabelText
                className="emotion-3 emotion-0"
              >
                <span
                  className="emotion-0 emotion-1 emotion-2"
                >
                  example
                </span>
              </StyledLabelText>
            </LabelText>
          </StyledHoc>
          <StyledHoc>
            <ErrorText
              className="emotion-3 emotion-0"
            >
              <StyledError
                className="emotion-3 emotion-0"
              >
                <span
                  className="emotion-0 emotion-8 emotion-2"
                >
                  example
                </span>
              </StyledError>
            </ErrorText>
          </StyledHoc>
          <TextAreaField
            error="example"
            rows="5"
            type="text"
          >
            <textarea
              className="emotion-14 emotion-15"
              rows="5"
              type="text"
            />
          </TextAreaField>
        </label>
      </StyledLabel>
    </Label>
  </StyledHoc>
</TextArea>
`;

exports[`Textarea matches snapshot for hint: wrapperHint mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-17:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-17 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-14 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-14:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-8 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    margin-bottom: 0;
  }
}

<TextArea
  hint="example"
  input={Object {}}
  meta={Object {}}
>
  <StyledHoc>
    <Label
      className="emotion-3 emotion-0"
    >
      <StyledLabel
        className="emotion-3 emotion-0"
      >
        <label
          className="emotion-0 emotion-17 emotion-2"
        >
          <StyledHoc>
            <LabelText
              className="emotion-3 emotion-0"
            >
              <StyledLabelText
                className="emotion-3 emotion-0"
              >
                <span
                  className="emotion-0 emotion-1 emotion-2"
                >
                  example
                </span>
              </StyledLabelText>
            </LabelText>
          </StyledHoc>
          <StyledHoc>
            <HintText
              className="emotion-3 emotion-0"
            >
              <StyledHint
                className="emotion-3 emotion-0"
              >
                <span
                  className="emotion-0 emotion-8 emotion-2"
                >
                  example
                </span>
              </StyledHint>
            </HintText>
          </StyledHoc>
          <TextAreaField
            rows="5"
            type="text"
          >
            <textarea
              className="emotion-14 emotion-15"
              rows="5"
              type="text"
            />
          </TextAreaField>
        </label>
      </StyledLabel>
    </Label>
  </StyledHoc>
</TextArea>
`;

exports[`Textarea matches wrapper snapshot: wrapper mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-10:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-10 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-7 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-7:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<TextArea
  input={Object {}}
  meta={Object {}}
>
  <StyledHoc>
    <Label
      className="emotion-3 emotion-0"
    >
      <StyledLabel
        className="emotion-3 emotion-0"
      >
        <label
          className="emotion-0 emotion-10 emotion-2"
        >
          <StyledHoc>
            <LabelText
              className="emotion-3 emotion-0"
            >
              <StyledLabelText
                className="emotion-3 emotion-0"
              >
                <span
                  className="emotion-0 emotion-1 emotion-2"
                >
                  example
                </span>
              </StyledLabelText>
            </LabelText>
          </StyledHoc>
          <TextAreaField
            rows="5"
            type="text"
          >
            <textarea
              className="emotion-7 emotion-8"
              rows="5"
              type="text"
            />
          </TextAreaField>
        </label>
      </StyledLabel>
    </Label>
  </StyledHoc>
</TextArea>
`;
